inject js fixed

--- a/manifest.json
+++ b/manifest.json
@@ -46,5 +46,5 @@
       ]
     }
   ],
-  "web_accessible_resources": ["js/mdl/material.min.css","src/inject/aux_fun.js"]
+  "web_accessible_resources": ["src/inject/aux_fun.js"]
 }
