--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,8 @@
         "src/inject/inject.js"
       ],
       "css" : [
-        "src/inject/inject.css"
+        "src/inject/inject.css",
+        "js/mdl/material.min.css"
       ]
     }
   ],
