--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "manifest_version": 2,
   "description": "Put description here",
-  "homepage_url": "http://google.com",
+  "homepage_url": "https://platan.us/",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
