feat(aux_fun): Support for Santander forms

--- a/manifest.json
+++ b/manifest.json
@@ -24,8 +24,6 @@
     "default_title": "browser/page action demo"
   },
   "permissions": [
-    "cookies",
-    "notifications",
     "tabs",
     "declarativeContent",
     "activeTab",
@@ -36,17 +34,12 @@
 
     {
       "matches": [
-        "https://login.bancochile.cl/*",
+        "https://portalpersonas.bancochile.cl/*",
         "https://www.santander.cl/transa/segmentos/Menu/*" ,
         "https://www.bancoestado.cl/imagenes/comun2008/nuevo_paglg_pers2.html"
       ],
       "js": [
-        "src/inject/inject.js", 
-        "src/browser_action/inject_button.js"
-      ],
-      "css" : [
-        "src/inject/inject.css",
-        "js/mdl/material.min.css"
+        "src/inject/inject.js"
       ]
     }
   ],
