--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Autopac",
   "short_name": "Autopac", 
-  "version": "0.0.6",
+  "version": "0.0.8",
   "manifest_version": 2,
-  "description": "Put description here",
+  "description": "Auto completa tus formularios de pagos agendados",
   "homepage_url": "https://platan.us/",
   "icons": {
     "16": "icons/icon16.png",
