--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1.1",
   "manifest_version": 2,
   "description": "Auto completa tus formularios de pagos agendados",
-  "homepage_url": "https://platan.us/",
+  "homepage_url": "https://fintual.cl/",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
